Install cross-env

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "http-server": "^14.1.1",
     "serve": "^14.2.1"
+  },
+  "dependencies": {
+    "cross-env": "^10.1.0"
   }
 }
