--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "http-server -p 8080 -o",
-    "dev": "serve -s . -l 8080"
+    "dev": "serve -s . -l 8080", 
+    "prod": "http-server ./ -p 80"
   },
   "keywords": [
     "website",
