--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Modern immersive website template with state-of-the-art design",
   "main": "index.html",
   "scripts": {
-    "start": "http-server -p 8080 -o",
-    "dev": "serve -s . -l 8080", 
-    "prod": "http-server ./ -p 80"
+    "start": "cross-env NODE_ENV=development http-server -p 8080 -o",
+    "dev": "cross-env NODE_ENV=development serve -s . -l 8080",
+    "prod": "cross-env NODE_ENV=production http-server ./ -p 80"
   },
   "keywords": [
     "website",
